Fixed navigation bar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
     font-size: 2rem;
+    padding: 20px;
 }
 
 .game {
@@ -125,4 +126,18 @@ h1 {
 
 #dashboard-dropdown {
     color: white;
+}
+
+.navbar {
+    padding: 5px;
+}
+
+.nav {
+    padding: 0px;
+}
+
+.nav-titles {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
